2016-01-20  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Upgrade mingwrt to version 3.21.1

	* mingw32/mingw32-runtime.xml (mingwrt): Add new version references.
	* common/issue.log mingw32/issue.log: Update accordingly.

2016-01-08  Erwin Waterlander  <waterlan@xs4all.nl>

	Upgraded package mingw32-ncurses to version 6.0-2.

	* contrib/mingw32-ncurses.xml: Created separate package
	  definitions for ncurses, libncurses, and terminfo.
	  Added libncurses-dll package.
	* contrib/issue.log: Updated accordingly.
	* common/issue.log: Updated accordingly.

	Updated package mingw32-pdcurses.

	* contrib/mingw32-pdcurses.xml: Added missing group affiliates.

2016-01-07  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Give contributed package their own package list.

	* mingw32/mingw32-package-list.xml: Remove contributed packages, to...
	* contrib/mingw32-contrib-package-list.xml: ...this new file.
	* common/package-list.xml (mingw32-contrib-package-list.xml): Add it.
	* common/issue.log mingw32/issue.log contrib/issue.log: Regenerate;
	publish all affected catalogue files.

2016-01-04  Erwin Waterlander  <waterlan@xs4all.nl>

	Upgrade mingw32-libunistring package to 0.9.6.

	* contrib/mingw32-libunistring.xml: Updated for libunistring version 0.9.6.
	* contrib/issue.log: Updated accordingly.

2016-01-03  Erwin Waterlander  <waterlan@xs4all.nl>

	New package mingw32-ncurses 6.0.

	* contrib/mingw32-ncurses.xml: New for ncurses version 6.0.
	* mingw32/mingw32-package-list.xml: Added mingw32-ncurses.
	* mingw32/issue.log: Updated accordingly.
	* contrib/issue.log: Updated accordingly.
	* common/issue.log: Updated accordingly.

2015-12-22  Erwin Waterlander  <waterlan@xs4all.nl>

	Upgrade dos2unix to version 7.3.2.

	* mingw32/mingw32-dos2unix.xml: Updated for dos2unix version 7.3.2.
	* msys/msys-dos2unix.xml: Updated for dos2unix version 7.3.2.
	* mingw32/issue.log: Updated accordingly.
	* msys/issue.log: Updated accordingly.