@@ -35,7 +35,7 @@
   4dab2d86ca2203a8ac0233824c687504fda4601e 2013091000 mingw32-expat.xml
   bc4b331f9bdfbf72a11a310fbc17a027396d09d5 2012073100 mingw32-gcc-tools.xml
   9d1d9deeccee4fb04f2944e3cd5e7b85757308ce 2011050500 mingw32-gcc3.xml
-  db58df47f1a7040488cac4bd0fc6dfab758035e7 2014082600 mingw32-gcc4.xml
+  b76fad61980b5e3235ad57a416a13ce8d1516ea6 2016022000 mingw32-gcc4.xml
   21031079d59268339bfd7c6dc8239df214588bca 2013091501 mingw32-gdb.xml
   14dd10ab97b27430bdb688f4e85993cd821f7a05 2012073100 mingw32-gendef.xml
   7b16c690a8b02106e7cc7abc6c6310fe30390683 2015090600 mingw32-gettext.xml
@@ -50,7 +50,7 @@
   cd33ad74b608bce33ea297801253e6efbafce27c 2012073100 mingw32-mingw-utils.xml
   8d3a7125499a85916b53efb4c897ac907e2490ab 2015082000 mingw32-mpc.xml
   8a11de23e7a89fd11436bdf162ef90712f30101b 2013102300 mingw32-mpfr.xml
-  56f4032058328cacfabe64fa46706d72c2fa931e 2016012000 mingw32-package-list.xml
+  56f4032058328cacfabe64fa46706d72c2fa931e 2016022000 mingw32-package-list.xml
   1f15439ee5f66ec22321c7aa853559b6f8f7172f 2015090800 mingw32-pexports.xml
   cdb2a4dbedfc9f2cdfc92340f6f9b12da061c0d9 2012073100 mingw32-popt.xml
   0a5d210a13d073104fb74b4f9c081674c9745cd1 2013090900 mingw32-pthreads-w32.xml
