@@ -21,10 +21,11 @@
         </paragraph>
       </description>
 
-      <source tarname="gcc-%-mingw32-src.tar.lzma" />
-      <licence tarname="gcc-%-mingw32-lic.tar.lzma" />
+      <source tarname="gcc-%-mingw32-src.tar.*" />
+      <licence tarname="gcc-%-mingw32-lic.tar.*" />
 
       <component class="lic">
+        <release tarname="gcc-4.9.3-1-mingw32-lic.tar.xz" />
         <release tarname="gcc-core-4.8.1-4-mingw32-lic.tar.lzma" />
         <release tarname="gcc-core-4.8.1-3-mingw32-lic.tar.lzma" />
         <release tarname="gcc-core-4.8.1-2-mingw32-lic.tar.lzma" />
@@ -40,6 +41,10 @@
         <requires eq="binutils-*-mingw32-bin.tar" />
         <requires eq="mingwrt-*-mingw32-dev.tar" />
         <requires eq="w32api-*-mingw32-dev.tar" />
+        <release tarname="gcc-core-4.9.3-1-mingw32-bin.tar.xz">
+          <requires eq="libquadmath-%-mingw32-dll-0.tar" />
+          <requires eq="libgcc-%-mingw32-dll-1.tar" />
+        </release>
         <release tarname="gcc-core-4.8.1-4-mingw32-bin.tar.lzma">
           <requires eq="gcc-core-%-mingw32-dev.tar" />
         </release>
@@ -98,6 +103,9 @@
         <requires eq="mingw32-libssp-%-mingw32-dll-0.tar" />
         <requires eq="mingw32-libgomp-%-mingw32-dll-1.tar" />
         <requires eq="mingw32-libquadmath-%-mingw32-dll-0.tar" />
+        <release tarname="gcc-4.9.3-1-mingw32-dev.tar.xz">
+          <download tarname="none" />
+        </release>
         <release tarname="gcc-core-4.8.1-4-mingw32-dev.tar.lzma" />
         <release tarname="gcc-core-4.8.1-3-mingw32-dev.tar.lzma" />
         <release tarname="gcc-core-4.8.1-2-mingw32-dev.tar.lzma" />
@@ -108,6 +116,9 @@
       </component>
 
       <component class="doc">
+        <release tarname="gcc-core-4.9.3-1-mingw32-doc.tar.xz">
+          <download tarname="none" />
+        </release>
         <release tarname="gcc-core-4.8.1-4-mingw32-doc.tar.lzma" />
         <release tarname="gcc-core-4.8.1-3-mingw32-doc.tar.lzma" />
         <release tarname="gcc-core-4.8.1-2-mingw32-doc.tar.lzma" />
@@ -120,6 +131,7 @@
       </component>
 
       <component class="man">
+        <release tarname="gcc-4.9.3-1-mingw32-man.tar.xz" />
         <release tarname="gcc-core-4.8.1-4-mingw32-man.tar.lzma" />
         <release tarname="gcc-core-4.8.1-3-mingw32-man.tar.lzma" />
         <release tarname="gcc-core-4.8.1-2-mingw32-man.tar.lzma" />
@@ -127,6 +139,7 @@
       </component>
 
       <component class="info">
+        <release tarname="gcc-4.9.3-1-mingw32-info.tar.xz" />
         <release tarname="gcc-core-4.8.1-4-mingw32-info.tar.lzma" />
         <release tarname="gcc-core-4.8.1-3-mingw32-info.tar.lzma" />
         <release tarname="gcc-core-4.8.1-2-mingw32-info.tar.lzma" />
@@ -134,6 +147,7 @@
       </component>
 
       <component class="lang">
+        <release tarname="gcc-4.9.3-1-mingw32-lang.tar.xz" />
         <release tarname="gcc-4.8.1-4-mingw32-lang.tar.lzma" />
         <release tarname="gcc-4.8.1-3-mingw32-lang.tar.lzma" />
         <release tarname="gcc-4.8.1-2-mingw32-lang.tar.lzma" />
@@ -163,15 +177,19 @@
           by the GNU C++ language compiler, unless support for shared
           runtime libraries is explicitly disabled when building.
         </paragraph>
-        <paragraph>NOTE: As of gcc-4.8.1 release this library is delivered in
-        the -dll file of the gcc-core package.
+        <paragraph>
+          NOTE: The gcc-4.8.1 release delivers this library in a tarball
+          named with the "gcc-core" prefix, rather than "libgcc".
         </paragraph>
       </description>
 
-      <source tarname="gcc-%-mingw32-src.tar.lzma" />
-      <licence tarname="gcc-%-mingw32-lic.tar.lzma" />
+      <source tarname="gcc-%-mingw32-src.tar.*" />
+      <licence tarname="gcc-%-mingw32-lic.tar.*" />
 
       <component class="dll">
+        <release tarname="libgcc-4.9.3-1-mingw32-dll-1.tar.xz">
+          <requires eq="mingw32-libmpc-*-mingw32-dll-3.tar" />
+        </release>
         <release tarname="libgcc-4.8.1-4-mingw32-dll-1.tar">
           <download tarname="gcc-core-4.8.1-4-mingw32-dll.tar.lzma"/>
           <requires eq="mingw32-libmpc-*-mingw32-dll-3.tar" />
@@ -210,12 +228,13 @@
         </paragraph>
       </description>
 
-      <source tarname="gcc-%-mingw32-src.tar.lzma" />
-      <licence tarname="gcc-%-mingw32-lic.tar.lzma" />
+      <source tarname="gcc-%-mingw32-src.tar.*" />
+      <licence tarname="gcc-%-mingw32-lic.tar.*" />
 
       <component class="bin">
         <affiliate group="Basic Setup" />
         <requires eq="gcc-core-%-mingw32-bin.tar" />
+        <release tarname="gcc-ada-4.9.3-1-mingw32-bin.tar.xz" />
         <release tarname="gcc-ada-4.8.1-4-mingw32-bin.tar.lzma">
           <requires eq="gcc-ada-%-mingw32-dev.tar" />
         </release>
@@ -233,15 +252,12 @@
         </release>
         <release tarname="gcc-ada-4.7.0-1-mingw32-bin.tar.lzma">
           <requires eq="libgnat-%-mingw32-dll-4_7.tar" />
-          <requires eq="gcc-core-%-mingw32-bin.tar" />
         </release>
         <release tarname="gcc-ada-4.6.2-1-mingw32-bin.tar.lzma">
           <requires eq="libgnat-%-mingw32-dll-4_6.tar" />
-          <requires eq="gcc-core-%-mingw32-bin.tar" />
         </release>
         <release tarname="gcc-ada-4.5.2-1-mingw32-bin.tar.lzma">
           <requires eq="libgnat-%-mingw32-dll-4_5.tar" />
-          <requires eq="gcc-core-%-mingw32-bin.tar" />
         </release>
       </component>
 
@@ -275,13 +291,16 @@
           by the GNU Ada language compiler, unless support for shared
           runtime libraries is explicitly disabled when building.
         </paragraph>
-        <paragraph>NOTE: As of gcc-4.8.1 release this library is delivered in
-        the -dll file of the gcc-ada package.
+        <paragraph>
+          NOTE: The gcc-4.8.1 release delivers this library in a tarball
+          named with the "gcc-ada" prefix, rather than "libgnat".  There
+          is (currently) no DLL component release of libgnat, for the
+          gcc-4.9.3 release.
         </paragraph>
       </description>
 
-      <source tarname="gcc-%-mingw32-src.tar.lzma" />
-      <licence tarname="gcc-%-mingw32-lic.tar.lzma" />
+      <source tarname="gcc-%-mingw32-src.tar.*" />
+      <licence tarname="gcc-%-mingw32-lic.tar.*" />
 
       <component class="dll">
         <release tarname="libgnat-4.5.2-1-mingw32-dll-4_5.tar.lzma" />
@@ -317,12 +336,15 @@
         </paragraph>
       </description>
 
-      <source tarname="gcc-%-mingw32-src.tar.lzma" />
-      <licence tarname="gcc-%-mingw32-lic.tar.lzma" />
+      <source tarname="gcc-%-mingw32-src.tar.*" />
+      <licence tarname="gcc-%-mingw32-lic.tar.*" />
 
       <component class="bin">
         <affiliate group="Basic Setup" />
         <requires eq="gcc-core-%-mingw32-bin.tar" />
+        <release tarname="gcc-c++-4.9.3-1-mingw32-bin.tar.xz" >
+          <requires eq="libstdc++-%-mingw32-dll-6.tar" />
+        </release>
         <release tarname="gcc-c++-4.8.1-4-mingw32-bin.tar.lzma" >
           <requires eq="gcc-c++-%-mingw32-dev.tar" />
         </release>
@@ -348,7 +370,6 @@
           <requires eq="libstdc++-%-mingw32-dll-6.tar" />
         </release>
         <release tarname="gcc-c++-4.5.2-1-mingw32-bin.tar.lzma" >
-          <requires eq="libstdc++-%-mingw32-dll-6.tar" />
         </release>
       </component>
 
@@ -368,6 +389,7 @@
       </component>
 
       <component class="man">
+        <release tarname="gcc-c++-4.9.3-1-mingw32-man.tar.xz" />
         <release tarname="gcc-c++-4.8.1-4-mingw32-man.tar.lzma" />
         <release tarname="gcc-c++-4.8.1-3-mingw32-man.tar.lzma" />
         <release tarname="gcc-c++-4.8.1-2-mingw32-man.tar.lzma" />
@@ -389,15 +411,17 @@
           by the GNU C++ language compiler, unless support for shared
           runtime libraries is explicitly disabled when building.
         </paragraph>
-        <paragraph>NOTE: As of gcc-4.8.1 release this library is delivered in
-        the -dll file of the gcc-c++ package.
+        <paragraph>
+          NOTE: The gcc-4.8.1 release delivers this library in a tarball
+          named with the "gcc-c++" prefix, rather than "libstdc++".
         </paragraph>
       </description>
 
-      <source tarname="gcc-%-mingw32-src.tar.lzma" />
-      <licence tarname="gcc-%-mingw32-lic.tar.lzma" />
+      <source tarname="gcc-%-mingw32-src.tar.*" />
+      <licence tarname="gcc-%-mingw32-lic.tar.*" />
 
       <component class="dll">
+        <release tarname="libstdc++-4.9.3-1-mingw32-dll-6.tar.xz" />
         <release tarname="libstdc++-4.8.1-4-mingw32-dll-6.tar" >
           <download tarname="gcc-c++-4.8.1-4-mingw32-dll.tar.lzma" />
         </release>
@@ -433,12 +457,15 @@
         </paragraph>
       </description>
 
-      <source tarname="gcc-%-mingw32-src.tar.lzma" />
-      <licence tarname="gcc-%-mingw32-lic.tar.lzma" />
+      <source tarname="gcc-%-mingw32-src.tar.*" />
+      <licence tarname="gcc-%-mingw32-lic.tar.*" />
 
       <component class="bin">
         <affiliate group="Basic Setup" />
         <requires eq="gcc-core-%-mingw32-bin.tar" />
+        <release tarname="gcc-fortran-4.9.3-1-mingw32-bin.tar.xz">
+          <requires eq="libgfortran-%-mingw32-dll-3.tar" />
+        </release>
         <release tarname="gcc-fortran-4.8.1-4-mingw32-bin.tar.lzma">
           <requires eq="gcc-fortran-%-mingw32-dev.tar.lzma" />
         </release>
@@ -484,6 +511,7 @@
       </component>
 
       <component class="info">
+        <release tarname="gcc-fortran-4.9.3-1-mingw32-info.tar.xz" />
         <release tarname="gcc-fortran-4.8.1-4-mingw32-info.tar.lzma" />
         <release tarname="gcc-fortran-4.8.1-3-mingw32-info.tar.lzma" />
         <release tarname="gcc-fortran-4.8.1-2-mingw32-info.tar.lzma" />
@@ -491,6 +519,7 @@
       </component>
 
       <component class="man">
+        <release tarname="gcc-fortran-4.9.3-1-mingw32-man.tar.xz" />
         <release tarname="gcc-fortran-4.8.1-4-mingw32-man.tar.lzma" />
         <release tarname="gcc-fortran-4.8.1-3-mingw32-man.tar.lzma" />
         <release tarname="gcc-fortran-4.8.1-2-mingw32-man.tar.lzma" />
@@ -514,8 +543,8 @@
         </paragraph>
       </description>
 
-      <source tarname="gcc-%-mingw32-src.tar.lzma" />
-      <licence tarname="gcc-%-mingw32-lic.tar.lzma" />
+      <source tarname="gcc-%-mingw32-src.tar.*" />
+      <licence tarname="gcc-%-mingw32-lic.tar.*" />
 
       <component class="dll">
         <release tarname="libgfortran-4.5.2-1-mingw32-dll-3.tar.lzma" />
@@ -535,6 +564,7 @@
         <release tarname="libgfortran-4.8.1-1-mingw32-dll-3.tar" >
           <download tarname="gcc-fortran-4.8.1-1-mingw32-dll.tar.lzma" />
         </release>
+        <release tarname="libgfortran-4.9.3-1-mingw32-dll-3.tar.xz" />
       </component>
     </package>
 
@@ -574,19 +604,28 @@
           you require it only if you wish to compile programs written
           in the Objective-C language.
         </paragraph>
-        <paragraph>NOTE: As of the gcc-4.8.1 release in order to install objc
-        you need to install the gcc-objc-%-mingw32-dev package instead of the
-        -bin package.  This change was made to be consistent with what -bin
-        usually contains compared to -dev.
+        <paragraph>
+          NOTE: For the gcc-4.8.1, release in order to install objc you need
+          to install the gcc-objc-%-mingw32-dev package instead of the -bin
+          package.  This change was made to be consistent with what -bin usually
+          contains compared to -dev.  In reality, this release simply created
+          the -dev package as a hybrid of content which would normally be
+          distributed as separate -bin and -dev packages, whereas earlier
+          releases provided the -bin package as such a hybrid.  This change
+          added an unnecessary level of package complexity; it has been
+          reverted for the gcc-4.9.3 release.
         </paragraph>
       </description>
 
-      <source tarname="gcc-%-mingw32-src.tar.lzma" />
-      <licence tarname="gcc-%-mingw32-lic.tar.lzma" />
+      <source tarname="gcc-%-mingw32-src.tar.*" />
+      <licence tarname="gcc-%-mingw32-lic.tar.*" />
 
       <component class="bin">
         <affiliate group="Basic Setup" />
         <requires eq="gcc-core-%-mingw32-bin.tar" />
+        <release tarname="gcc-objc-4.9.3-1-mingw32-bin.tar.xz">
+          <requires eq="libobjc-%-mingw32-dll-4.tar" />
+        </release>
         <release tarname="gcc-objc-4.7.2-1-mingw32-bin.tar.lzma">
           <requires eq="libobjc-%-mingw32-dll-4.tar" />
         </release>
@@ -643,13 +682,14 @@
           the GNU Objective-C language compiler, unless support for shared
           runtime libraries is explicitly disabled when building.
         </paragraph>
-        <paragraph>NOTE: As of gcc-4.8.2-1 release this library is delivered
-        in the primary gcc-objc-%-mingw32-dll file.
+        <paragraph>
+          NOTE: The gcc-4.8.1 release delivers this library in a tarball
+          named with the "gcc-objc" prefix, rather than "libobjc".
         </paragraph>
       </description>
 
-      <source tarname="gcc-%-mingw32-src.tar.lzma" />
-      <licence tarname="gcc-%-mingw32-lic.tar.lzma" />
+      <source tarname="gcc-%-mingw32-src.tar.*" />
+      <licence tarname="gcc-%-mingw32-lic.tar.*" />
 
       <component class="dll">
         <release tarname="libobjc-4.5.2-1-mingw32-dll-2.tar.lzma" />
@@ -669,14 +709,15 @@
         <release tarname="libobjc-4.8.1-1-mingw32-dll-4.tar" >
           <download tarname="gcc-objc-4.8.1-1-mingw32-dll.tar.lzma"/>
         </release>
+        <release tarname="libobjc-4.9.3-1-mingw32-dll-4.tar.xz" />
       </component>
     </package>
 
     <package name="mingw32-libgomp" alias="libgomp">
       <affiliate group="MinGW Compiler Suite" />
 
-      <source tarname="gcc-%-mingw32-src.tar.lzma" />
-      <licence tarname="gcc-%-mingw32-lic.tar.lzma" />
+      <source tarname="gcc-%-mingw32-src.tar.*" />
+      <licence tarname="gcc-%-mingw32-lic.tar.*" />
 
       <component class="dll">
         <requires eq="libpthread-*-mingw32-dll-2.tar" />
@@ -707,8 +748,8 @@
     <package name="mingw32-libssp" alias="libssp">
       <affiliate group="MinGW Compiler Suite" />
 
-      <source tarname="gcc-%-mingw32-src.tar.lzma" />
-      <licence tarname="gcc-%-mingw32-lic.tar.lzma" />
+      <source tarname="gcc-%-mingw32-src.tar.*" />
+      <licence tarname="gcc-%-mingw32-lic.tar.*" />
 
       <component class="dll">
         <release tarname="libssp-4.5.2-1-mingw32-dll-0.tar.lzma" />
@@ -738,8 +779,8 @@
     <package name="mingw32-libquadmath" alias="libquadmath">
       <affiliate group="MinGW Compiler Suite" />
 
-      <source tarname="gcc-%-mingw32-src.tar.lzma" />
-      <licence tarname="gcc-%-mingw32-lic.tar.lzma" />
+      <source tarname="gcc-%-mingw32-src.tar.*" />
+      <licence tarname="gcc-%-mingw32-lic.tar.*" />
 
       <component class="dll">
         <release tarname="libquadmath-4.6.1-2-mingw32-dll-0.tar.lzma" />
@@ -762,6 +803,11 @@
           <download tarname="none"/>
           <requires eq="mingw32-libgcc-%-mingw32-dll-1.tar" />
         </release>
+        <release tarname="libquadmath-4.9.3-1-mingw32-dll-0.tar.xz" />
+      </component>
+
+      <component class="info">
+        <release tarname="libquadmath-4.9.3-1-mingw32-info.tar.xz" />
       </component>
     </package>
 
